# libdeflate

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.msc  NEWS  NEWS.md  README  README.md  common_defs.h  libdeflate-config.cmake.in  libdeflate.h  libdeflate.pc.in
.github/workflows/: android.yml  ci.yml
common/: common_defs.h  compiler_gcc.h  compiler_msc.h
examples/: benchmark.c
lib/: adler32.c  adler32.h  adler32_impl.h  adler32_vec_template.h  aligned_malloc.c  aligned_malloc.h  arm_cpu_features.c  arm_cpu_features.h  bt_matchfinder.h  cpu_features_common.h  crc32.c  crc32.h  crc32_arm.h  crc32_impl.h  crc32_multipliers.h  crc32_vec_template.h  decompress_impl.h  decompress_template.h  deflate_compress.c  deflate_compress.h  deflate_constants.h  deflate_decompress.c  divsufsort.c  divsufsort.h  gzip_compress.c  gzip_constants.h  gzip_decompress.c  gzip_overhead.h  hc_matchfinder.h  ht_matchfinder.h  lcpit_matchfinder.c  lcpit_matchfinder.h  lib_common.h  matchfinder_avx2.h  matchfinder_common.h  matchfinder_neon.h  matchfinder_sse2.h  rolling_crc.h  unaligned.h  utils.c  (+5 more)
lib/arm/: adler32_impl.h  cpu_features.c  cpu_features.h  crc32_impl.S  crc32_impl.h  crc32_pmull_helpers.h  crc32_pmull_wide.h  crc32_template.h  matchfinder_impl.h
lib/x86/: adler32_impl.h  adler32_template.h  cpu_features.c  cpu_features.h  crc32_impl.h  crc32_pclmul_template.h  crc32_template.h  decompress_impl.h  matchfinder_impl.h
programs/: CMakeLists.txt  benchmark.c  checksum.c  config.h.in  detect.sh  gzip.c  gzip_compress_by_stream.c  gzip_compress_by_stream.h  gzip_decompress_by_stream.c  gzip_decompress_by_stream.h  prog_util.c  prog_util.h  test_checksums.c  test_custom_malloc.c  test_incomplete_codes.c  test_invalid_streams.c  test_litrunlen_overflow.c  test_overread.c  test_slow_decompression.c  test_trailing_bytes.c  test_util.c  test_util.h  test_zlib.c  tgetopt.c
results/: baseline.txt  new.txt
scripts/: android_build.sh  android_tests.sh  benchmark.sh  check.sh  checksum.sh  checksum_benchmarks.sh  cmake-helper.sh  corpus_util.py  deflate_benchmarks.sh  exec_tests.sh  gen-crc32-consts.py  gen-release-archives.sh  gen_bitreverse_tab.py  gen_crc32_multipliers.c  gen_crc32_table.c  gen_crc32_tables.c  gen_default_litlen_costs.py  gen_offset_slot_map.py  gen_rolling_crc_tables.c  gzip_tests.sh  make-windows-releases.sh  run_tests.sh  test_integrity-b.sh  toolchain-i686-w64-mingw32.cmake  toolchain-x86_64-w64-mingw32.cmake  windows_build.sh
scripts/afl-fuzz/: .gitignore  Makefile  fuzz.sh
scripts/afl-fuzz/deflate_compress/: fuzz.c
scripts/libFuzzer/: fuzz.sh
scripts/libFuzzer/deflate_compress/: fuzz.c
scripts/libFuzzer/deflate_decompress/: fuzz.c
scripts/libFuzzer/gzip_decompress/: fuzz.c
scripts/libFuzzer/zlib_decompress/: fuzz.c
src/: adler32.c  adler32.h  aligned_malloc.c  aligned_malloc.h  bitops.h  bt_matchfinder.h  compiler-gcc.h  compiler-msc.h  compiler.h  crc32.c  crc32.h  crc32_table.h  decompress_impl.h  deflate_compress.c  deflate_compress.h  deflate_constants.h  deflate_decompress.c  endianness.h  gzip_compress.c  gzip_constants.h  gzip_decompress.c  hc_matchfinder.h  lz_extend.h  lz_hash.h  lz_hash3.h  matchfinder_avx2.h  matchfinder_common.h  matchfinder_neon.h  matchfinder_nonsliding.h  matchfinder_sliding.h  matchfinder_sse2.h  types.h  unaligned.h  util.h  x86_cpu_features.c  x86_cpu_features.h  zlib_compress.c  zlib_constants.h  zlib_decompress.c
test/: benchmark.c  gen_crc32_table.c
tools/: android_build.sh  android_test.sh  arm64_test.sh  arm_test.sh  benchmark.c  checksum_benchmarks.sh  exec_tests.sh  gen_crc32_table.c  gzip.c  gzip_tests.sh  make-windows-releases  mips_build.sh  mips_test.sh  msc_test.bat  produce_gzip_benchmark_table.sh  run_tests.sh  util.h  wgetopt.c  wgetopt.h  windows_test.sh
tools/afl-fuzz/deflate_compress/: fuzz.c
tools/afl-fuzz/deflate_decompress/: fuzz.c
tools/afl-fuzz/gzip_decompress/: fuzz.c
tools/afl-fuzz/zlib_decompress/: fuzz.c
tools/optimization/: block_split_params.txt  optimize_block_split_params.r  results.txt  try_block_params.sh
